# lab8

./: README.md  pyproject.toml
docs/: integrity-statement.md  percived-requirments.md  pseudocode.md
src/lists/: __init__.py
src/lists_/: __init__.py  __main__.py  client_info.py  constants.py  event_info.py  helpers.py  main.py  models.py  pricing.py  records.py
tests/: conftest.py  test_client_info.py  test_event_info.py  test_lab.py  test_lists_.py  test_pricing.py  test_records.py
