[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lab-8-fountain-view-hall"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lab_8_fountain_view_hall"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
