[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lists"
version = "0.1.0"
description = "Practicing lists and meeting or exceeding the requirements in the requirements document."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "black>=25.0",
    "pre-commit>=4.0",
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lists"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py313"]
